--- a/.eslintrc
+++ b/.eslintrc
@@ -56,7 +56,13 @@
         "newlines-between": "always"
       }
     ],
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "no-param-reassign": ["error", {
+      "props": true,
+      "ignorePropertyModificationsFor": [
+        "state"
+      ]
+    }]
   },
   "settings": {
     "version": "detect",
