--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-markdown": "^9.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
