--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.9.4",
+    "axios": "^1.5.1",
     "babel-eslint": "^10.1.0",
     "date-fns": "^2.30.0",
     "eslint": "^8.50.0",
